<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorBlueBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_above="@id/linear"
        android:text="@string/text_authorization"
        style="@style/TextViewRegAndAuth"/>

    <LinearLayout
        android:id="@+id/linear"
        android:backgroundTint="@color/colorBlueDark"
        style="@style/LinearRegAndAuth">

        <EditText
            android:id="@+id/edtLoginAuth"
            android:hint="@string/text_login"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorBlueBackground"
            style="@style/EditTextLoginPassword"/>
        <View
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="0.01dp"/>
        <EditText
            android:id="@+id/edtPasswordAuth"
            android:textColorHint="@color/colorBlueBackground"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            style="@style/EditTextLoginPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnAuthorization"
        android:layout_below="@+id/linear"
        android:text="@string/text_come_in"
        android:backgroundTint="@android:color/black"
        style="@style/ButtonRegAndAuth"/>
    <TextView
        android:id="@+id/btnCreateAccount"
        android:layout_alignParentBottom="true"
        android:text="@string/text_create_account"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>