<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorRedBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_above="@id/linear"
        android:text="@string/text_reg"
        style="@style/TextViewRegAndAuth"/>

    <LinearLayout
        android:id="@+id/linear"
        android:backgroundTint="@color/colorDarkRed"
        style="@style/LinearRegAndAuth">

        <EditText
            android:id="@+id/edtLogin"
            android:hint="@string/text_login"
            android:textColorHint="@color/colorRedBackground"
            android:inputType="textEmailAddress"
            style="@style/EditTextLoginPassword"/>
        <View
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="0.01dp"/>
        <EditText
            android:id="@+id/edtPassword"
            android:textColorHint="@color/colorRedBackground"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            style="@style/EditTextLoginPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegistration"
        android:layout_below="@+id/linear"
        android:text="@string/text_registration"
        android:backgroundTint="@color/colorRedBtn"
        style="@style/ButtonRegAndAuth"/>
    <TextView
        android:id="@+id/btnSignAccount"
        android:textColor="#eeaaa7"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:text="@string/text_login_to_account"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>